gitlab/gitlab-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
spec:
  rules:
  - host: git.test.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gitlab
          servicePort: http
